--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -18,27 +18,21 @@
     border-radius: 25px;
     padding:0.5rem 3rem 0.5rem 3rem;
   }
-  @media (max-width:770px) {
-   .nav-search{
-    size:20px
-   } 
-  }
-
 </style>
 
 <nav class="navbar navbar-expand-md bg-body-light navbar-collapse border-bottom sticky-top ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i claa-regular fa-ss="fcompass"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
       <button class="navbar-toggler" type="button" 
       data-bs-toggle="collapse" 
-      data-bs-target="#navbarNavAltMarkup" ">
+      data-bs-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/listings">Explore</a>
         </div>
-        <div class="navbar-nav ms-auto nav-search">
+        <div class="navbar-nav ms-auto">
           <form class="d-flex" role="search">
             <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations">
             <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
